--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "yarn": ">= 1.13"
   },
   "scripts": {
+    "dev": "NODE_ENV=development nodemon src/index.js",
     "start": "NODE_ENV=production nodemon src/index.js"
   },
   "dependencies": {
+    "bull": "3.7.0",
     "dotenv": "7.0.0",
     "node-fetch": "2.3.0",
     "nodemon": "1.18.10"
