--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "bull": "3.7.0",
+    "csv-parse": "4.3.4",
     "dotenv": "7.0.0",
     "node-fetch": "2.3.0",
     "nodemon": "1.18.10"
